--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.13.1",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "request": "^2.73.0",
     "yargs": "^4.8.1"
